# vocal-helper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  GUI.md  LANDSCAPE.md  LISEZMOI.md  Makefile  PAYSAGE.md  README.md  SECURITY.md  TECHNICAL_STACK.md  TRIGGERS.md  nomoreclaude.sh  pyproject.toml  requirements-dev.txt  requirements.txt  settings.yaml.example
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
assets/: landscape.csv  paysage.csv
doc/: refs.bib  tech-report.en.docx  tech-report.en.md  tech-report.fr.docx  tech-report.fr.md
doc/figures/: _gen_figures.py
examples/: live_mic_to_text.py  live_url_to_text.py
scripts/: install-hooks.sh
skills/: README.md
skills/vocal-helper/: SKILL.md
skills/vocal-helper/references/: cli-reference.md  surfaces.md  triggers.md
studies/: README.md  asr_offline_batching.py  diar_der_paths.py  diar_embedding_backend.py  diar_falcon_vs_pyannote.py  eot_semantic_vs_silero.py  llm_cadence_sweep.py  llm_cadence_sweep_multi.py  llm_engine_comparison.py  llm_model_size_sweep.py  router_profile_validation.py  stt_faster_whisper_vs_pywhispercpp.py  whisper_prompt_lang_lock.py
tests/: _ami_fixture.py  conftest.py  test_api.py  test_asr.py  test_cli.py  test_cli_diar_default.py  test_der_smoke.py  test_diar_engines.py  test_diar_refine.py  test_diar_sherpa.py  test_integration_youtube.py  test_lang_pair.py  test_lid.py  test_llm.py  test_mcp.py  test_offline_regression.py  test_pipeline.py  test_pipeline_observability.py  test_ported_patterns.py  test_public_api_stability.py  test_router.py  test_settings.py  test_smoke.py  test_sortformer_parse.py  test_sources.py  test_tts.py  test_vad.py
vocal_helper/: __init__.py  _settings.py  api.py  asr.py  cli.py  cli_argparse.py  cli_click.py  diar.py  eot.py  eot_bench.py  gui.py  lid.py  llm.py  mcp.py  parallel_pipelines.py  pipeline.py  router.py  sources.py  tts.py  types.py  vad.py
webui/: README.md  app.js  index.html
